--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,4 +37,5 @@ jobs:
           publish_dir: ./build
           user_name: github-actions[bot]
           user_email: github-actions[bot]@users.noreply.github.com
+          force_orphan: true
 
